--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.7.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.horatio</groupId>
+    <groupId>io.horatius</groupId>
     <artifactId>farouk-university</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>farouk-university</name>
