--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "~13.0.0-next.0",
     "@ngrx/effects": "^13.2.0",
     "@ngrx/store": "^13.2.0",
+    "angular-in-memory-web-api": "^0.13.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
