--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.data.cassandra.keyspace-name=main
 spring.data.cassandra.username=TebufdqbKvhuPcvxkpWjtrRH
 spring.data.cassandra.password=-c9MKM4fpu,Q48sO6IbrFJnHbJ.FPsSQ-FASsJ6vrs28E7,tgxp__QBWxKk9urRJ3XoNXP.b4Z2RmmycX0NLzuiH8H.AeENrgzfpqn6.9vfLAJAHwqaLcRM6BXBpvmvM
-spring.data.cassandra.schema-action=recreate_drop_unused
+spring.data.cassandra.schema-action=none
 spring.data.cassandra.request.timeout=10s
 spring.data.cassandra.connection.connect-timeout=10s
 spring.data.cassandra.connection.init-query-timeout=10s
 datastax.astra.secure-connect-bundle=secure-connect.zip
-
+logging.level.org.springframework.web.cors.reactive.DefaultCorsProcessor=debug
 astra.db.id=
 astra.db.region=
 astra.db.keyspace=
